--- a/nest.yml
+++ b/nest.yml
@@ -1,7 +1,7 @@
 author: Zhou, Yanzhao
 version: 1.0.0
 backend: pytorch
-url: https://github.com/ZhouYanzhao/PRM
+url: https://github.com/soumyajit-ray/PRM
 module_path: './install'
 requirements:
   - torch>=0.4.0
